[package]
name = "google-auth"
version = "1.0.0"
description = ""
authors = ["cleveng <cleveng@gmail.com>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/cleveng/google-auth.git"
rust-version = "1.85.0"

[dependencies]
oauth2 = "4.4.2"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[dev-dependencies]
dotenvy = "0.15.7"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
